--- a/RecuperacionFase3/tema2.html
+++ b/RecuperacionFase3/tema2.html
@@ -13,7 +13,7 @@
     <!-- Sección del encabezado -->
     <header>
         <img src="img/flexbox-css.png" alt="Imagen" height="100" width="200">
-        <h1>Diseño de Sitios Web: Flex Box y Css Grid</h1>
+        <h1>Diseño de Sitios Web: aquí coloco mi temática</h1>
         <img src="img/css.jpg" alt="Imagen" height="100" width="200">
     </header>
 
@@ -23,7 +23,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="#">Temas</a>
                 <ul class="dropdown">
-                    <li><a href="tema1.html">FlexBox</a></li>
+                    <li><a href="tema1.html">Flex Box</a></li>
                     <li><a href="tema2.html">Css Grid</a></li>
                 </ul>
             </li>
@@ -39,7 +39,7 @@
                     <li><a href="#">prueba2</a></li>
                 </ul>
             </li>
-            <li><a href="autor.html">Autor</a></li>
+            <li><a href="autor.html">Jessica Pardo</a></li>
         </ul>
     </nav>
 
@@ -57,43 +57,22 @@
         <section>
             <!-- aquí debo cambiar en cada página con los contenidos -->
             <article>
-                <h3>Flex Box</h3>
-                <p> Es un modelo de cajas flexibles que se utilizan
-                    para diseñar webs en CSS 3 totalmente responsive.
-                    Esto significa que las dimensiones de las cajas que
-                    conforman el diseño de la página son elásticas y pueden
-                    expandirse o encogerse dependiendo del navegador y
-                    dispositivo desde el que el usuario visualice la web.
-                    Se trata de una mejora considerable que evita emplear
-                    propiedades como el «float" o el «position" en conjunto
-                    con otras cuando lo que simplemente se desea es construir
-                    cajas flexibles y fluidas con distintos tamaños y que sean
-                    adaptables fácilmente a la resolución de cada dispositivo.
-</p>
-            </article>
-            <article>
                 <h3>Css Grid</h3>
-                <p>CSS Grid layout contiene funciones de diseño dirigidas a los
-                    desarrolladores de aplicaciones web. El CSS grid se puede utilizar
-                    para lograr muchos diseños diferentes. También se destaca por permitir
-                    dividir una página en áreas o regiones principales, por definir la
-                    relación en términos de tamaño, posición y capas entre partes de un control
-                    construido a partir de primitivas HTML.
-</p>
+               <iframe src="pdf/css grid.pdf" frameborder="0" width="100%"  height="400"></iframe>
             </article>
         </section>
         
     </div>
     <!-- Pie de página -->
     <footer>
+       <p> 
         <h1>Proyecto de sitio web Perido 2021 16-01 </h1>
         <h3>Nombre: Jessica Marilin Pardo Fonseca</h3>
         <h3>Programa: Ingenieria de sistemas</h3>
-        <h3>Fecha:22-02-2021</h3>
+        <h3>Fecha:07-05-2021</h3>
         <p>Datos de contacto. celular:3219842460</p>
         <p>correo: jecka951206@gmail.com</p>
-        <p>skype: Jessica Pardo Fonseca</p></footer>
-
+        <p>skype: Jessica Pardo Fonseca</p>
        </p>
 
 
