--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>shype: Jessica Pardo Fonseca</p>
     <p>
         <br>
-        <a href="Fase3 "></a>
+        <a href="Fase3/index.html "></a>
     </p>
 </body>
 </html>
