--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <p>Datos de contacto. celular:3219842460</p>
     <p>correo: jecka951206@gmail.com</p>
     <p>shype: Jessica Pardo Fonseca</p>
-    
     <p>
         <br>
-        <a href="Fase3/index.html "></a>
+        <a href="fase3/index.html">fase3 </a>    
     </p>
-
+    
+ 
 </body>
 </html>
