--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>shype: Jessica Pardo Fonseca</p>
     <p>
         <br>
-        <a href="fase3/index.html">fase3 </a>    
+        <a href="Fase3/index.html">fase3 </a>    
     </p>
     
  
