--- a/fase4/index.html
+++ b/fase4/index.html
@@ -35,8 +35,8 @@
             </li>
             <li> <a href="#">Aprendizaje</a>
                 <ul class="dropdown">
-                    <li><a href="#">prueba1</a></li>
-                    <li><a href="#">prueba2</a></li>
+                    <li><a href="cuestionario1.html">prueba1</a></li>
+                    <li><a href="cuestionario2.html">prueba2</a></li>
                 </ul>
             </li>
             <li><a href="autor.html">Jessica Pardo</a></li>
