--- a/fase4/cuestionario2.html
+++ b/fase4/cuestionario2.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-        crossorigin="anonymous">
-        
-    </script>
+        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous">
+
+        </script>
 
 </head>
 
@@ -42,16 +41,16 @@
                             <li><a class="dropdown-item" href="tema1.html">FlexBox</a></li>
                             <li><a class="dropdown-item" href="tema2.html">CSS Grid</a></li>
                         </ul>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Recursos
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="recurso1.html">Audio1</a></li>
-                                <li><a class="dropdown-item" href="recurso2.html">Audio 2</a></li>
-                            </ul>
-                        </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Recursos
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="recurso1.html">Audio1</a></li>
+                            <li><a class="dropdown-item" href="recurso2.html">Audio 2</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -62,9 +61,7 @@
                             <li><a class="dropdown-item" href="cuestionario2.html">Prueba 2</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="autor.html" tabindex="-1" aria-disabled="true">Jessica Pardo</a>
-                    </li>
+                    <li><a href="autor.html">Jessica Pardo</a></li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -81,8 +78,8 @@
                     <p>texto</p>
                 </article>
                 <iframe
-                    src="https://docs.google.com/forms/d/e/1FAIpQLScYMUViNyOj83R4TSPHnZzZOpmEE-IWLbb2rAYe47AQCUiAVg/viewform?embedded=true"
-                    width="640" height="2010" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+                    src="https://docs.google.com/forms/d/e/1FAIpQLScqDc0XAS2uR4iVcUE26zS1rp5OllesGqSdveQWLFQcqHJEpg/viewform?embedded=true"
+                    width="640" height="2008" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
                 <article></article>
             </section>
             <aside class="col-4">
