--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <p>
         <br>
-        <a href="Fase3/index.html">Fase3</a>    
+        <a href="Fase3/index.html">Fase3</a>   
     </p>
     <p>
         <br>
-        <a href="fase4/index.html"></a>
+        <a href="fase4/index.html">fase4</a>   
     </p>
     
 </body>
