--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </p>
     <p>
         <br>
-        <a href="fase4/index.html">fase4</a>   
+        <a href="Fase4/index.html">Fase4</a>  
     </p>
     
 </body>
